--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "thrift",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/main.js",
   "scripts": {
+    "server": "babel-watch src/main.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -17,8 +18,23 @@
   },
   "homepage": "https://github.com/pointatnick/Thrift#readme",
   "dependencies": {
+    "babel-watch": "^2.0.3-rc0",
     "bluebird": "^3.4.6",
     "koa": "^2.0.0",
     "koa-router": "^5.4.0"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.16.0",
+    "babel-core": "^6.17.0",
+    "babel-eslint": "^7.0.0",
+    "babel-preset-es2015-node6": "^0.3.0",
+    "babel-preset-stage-2": "^6.17.0",
+    "eslint": "^3.7.1"
+  },
+  "babel": {
+    "presets": [
+      "stage-2",
+      "es2015-node6"
+    ]
   }
 }
