--- a/package.json
+++ b/package.json
@@ -1,35 +1,38 @@
 {
-  "name": "thrift",
+  "name": "rethrift",
   "version": "1.0.0",
-  "description": "",
-  "main": "src/main.js",
+  "description": "rethrift app",
+  "main": "app.js",
   "scripts": {
-    "server": "babel-watch src/main.js",
+    "start": "node app.js",
+    "server": "babel-watch src/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/pointatnick/Thrift.git"
+    "url": "git+https://github.com/pointatnick/CS130Backend.git"
   },
-  "author": "",
+  "author": "rethrift team",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/pointatnick/Thrift/issues"
+    "url": "https://github.com/pointatnick/CS130Backend/issues"
   },
-  "homepage": "https://github.com/pointatnick/Thrift#readme",
+  "homepage": "https://github.com/pointatnick/CS130Backend#readme",
   "dependencies": {
-    "babel-watch": "^2.0.3-rc0",
-    "bluebird": "^3.4.6",
-    "koa": "^2.0.0",
-    "koa-router": "^7.0.1"
-  },
-  "devDependencies": {
     "babel-cli": "^6.16.0",
     "babel-core": "^6.17.0",
-    "babel-eslint": "^7.0.0",
     "babel-preset-es2015-node6": "^0.3.0",
     "babel-preset-stage-2": "^6.17.0",
-    "eslint": "^3.7.1"
+    "babel-watch": "^2.0.3",
+    "bluebird": "^3.4.6",
+    "co": "^4.6.0",
+    "fs": "0.0.1-security",
+    "koa": "^2.0.0",
+    "koa-bodyparser": "^2.2.0",
+    "koa-router": "^7.0.1",
+    "mysql": "^2.11.1",
+    "path": "^0.12.7",
+    "pg": "^6.1.0"
   },
   "babel": {
     "presets": [
