--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node app.js",
     "server": "babel-watch src/app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "transpile": "[ -d src ] && ./node_modules/.bin/babel src --out-dir lib || true"
   },
   "repository": {
     "type": "git",
