--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node app.js",
     "server": "babel-watch src/app.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "transpile": "[ -d src ] && ./node_modules/.bin/babel src --out-dir lib || true"
+    "transpile": "[ -d src ] && ./node_modules/.bin/babel src --out-dir prodCode || true"
   },
   "repository": {
     "type": "git",
